@@ -1,3 +1,7 @@
+2012-09-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* window.py: Added a notebook context menu for removing tabs.
+
 2012-09-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* menu.py: Added support for opening conversation in other column.
